test/tests/errors/error-class-inherit-a-not-subtype-b.sm
// true
// false
// false
/**/
/**/

program {
    class A {}

    class B extends A {}

    var b: B = new A();
}